[gd_scene load_steps=4 format=3 uid="uid://b4xujaakdsubi"]

[ext_resource type="Script" uid="uid://3ckyqruyrspc" path="res://Utility/item_option.gd" id="1_unejd"]
[ext_resource type="Texture2D" uid="uid://dgfjrllxo27n7" path="res://Textures/Items/Weapons/pulse_laser.png" id="2_k7luv"]
[ext_resource type="FontFile" uid="uid://dlth4bsmavf24" path="res://Font/globet_bold.ttf" id="3_jyb5d"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.159988
offset_bottom = -0.0400047
color = Color(0.08468992, 0.08468992, 0.08468992, 1)
script = ExtResource("1_unejd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_k7luv")

[node name="lbl_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("3_jyb5d")
theme_override_font_sizes/font_size = 11
text = "Name"
horizontal_alignment = 1

[node name="lbl_description" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 7
text = "Description of Item"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 9
text = "level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
